@@ -23,6 +23,7 @@
 	* ldns_dname_is_wildcard added.
 	* Fixed: signatures over wildcards had the wrong labelcount.
 	* Fixed ldns_verify() inconsistent return values.
+	* Fixed ldns_resolver to copy and free tsig name, data and algorithm.
 
 1.6.4	2010-01-20
 	* Imported pyldns contribution by Zdenek Vasicek and Karel Slany.
